[package]
name = "teravolt"
version = "0.1.0"
authors = ["Semirix <semirix@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teravolt-codegen = { version = "0.1", path = "../teravolt-codegen" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = { version = "4", features = ["rayon"] }
