[package]
name = "teravolt"
version = "0.1.0"
authors = ["Semirix <semirix@protonmail.com>"]
license = "Apache-2.0"
description = "An executor for handling streaming data from multiple sources and enabling seamless communication between them."
readme = "../README.md"
repository = "https://github.com/semirix/Teravolt"
homepage = "https://github.com/semirix/Teravolt"
edition = "2018"

[dependencies]
teravolt-codegen = { version = "0.1", path = "../teravolt-codegen" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = { version = "4", features = ["rayon"] }
