[package]
name = "teravolt"
version = "0.4.0"
authors = ["Semirix <semirix@protonmail.com>"]
license = "Apache-2.0"
description = "An executor for handling streaming data from multiple sources and enabling seamless communication between them."
readme = "../README.md"
repository = "https://github.com/semirix/Teravolt"
homepage = "https://github.com/semirix/Teravolt"
edition = "2018"

[dependencies]
#teravolt-codegen = { version = "0.3.3", path = "../teravolt-codegen", package = "teravolt-codegen" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
dyn-clone = "1"
futures = "0.3"
hashbrown = "0.11"
log = "0.4"
